# scaffold

./: README.md  environment.yml  main.py  pyproject.toml
src/: calculator.py
tests/: test_calculator.py
